// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`graphqlQueries mocks FOOTER_QUERY successfully 1`] = `
{
  "data": {
    "Footer": {
      "copyrightText": "Hello World",
      "menuItems": [
        {
          "externalLink": "Hello World",
          "id": "Hello World",
          "internalLink": {
            "id": "Hello World",
            "slug": "Hello World",
            "title": "Hello World",
          },
          "label": "Hello World",
          "linkType": "external",
        },
        {
          "externalLink": "Hello World",
          "id": "Hello World",
          "internalLink": {
            "id": "Hello World",
            "slug": "Hello World",
            "title": "Hello World",
          },
          "label": "Hello World",
          "linkType": "external",
        },
      ],
      "socialLinks": [
        {
          "icon": {
            "alt": "Hello World",
            "height": 29.804004943573318,
            "id": "Hello World",
            "url": "Hello World",
            "width": 74.25979714606336,
          },
          "id": "Hello World",
          "url": "Hello World",
        },
        {
          "icon": {
            "alt": "Hello World",
            "height": 29.804004943573318,
            "id": "Hello World",
            "url": "Hello World",
            "width": 74.25979714606336,
          },
          "id": "Hello World",
          "url": "Hello World",
        },
      ],
    },
  },
}
`;

exports[`graphqlQueries mocks HEADER_QUERY successfully 1`] = `
{
  "data": {
    "Header": {
      "callToAction": {
        "color": "green",
        "externalLink": "Hello World",
        "id": "Hello World",
        "internalLink": {
          "id": "Hello World",
          "slug": "Hello World",
          "title": "Hello World",
        },
        "label": "Hello World",
        "linkType": "external",
      },
      "menuItems": [
        {
          "externalLink": "Hello World",
          "id": "Hello World",
          "internalLink": {
            "id": "Hello World",
            "slug": "Hello World",
            "title": "Hello World",
          },
          "label": "Hello World",
          "linkType": "external",
          "submenuItems": [
            {
              "externalLink": "Hello World",
              "id": "Hello World",
              "internalLink": {
                "id": "Hello World",
                "slug": "Hello World",
                "title": "Hello World",
              },
              "label": "Hello World",
              "linkType": "external",
            },
            {
              "externalLink": "Hello World",
              "id": "Hello World",
              "internalLink": {
                "id": "Hello World",
                "slug": "Hello World",
                "title": "Hello World",
              },
              "label": "Hello World",
              "linkType": "external",
            },
          ],
        },
        {
          "externalLink": "Hello World",
          "id": "Hello World",
          "internalLink": {
            "id": "Hello World",
            "slug": "Hello World",
            "title": "Hello World",
          },
          "label": "Hello World",
          "linkType": "external",
          "submenuItems": [
            {
              "externalLink": "Hello World",
              "id": "Hello World",
              "internalLink": {
                "id": "Hello World",
                "slug": "Hello World",
                "title": "Hello World",
              },
              "label": "Hello World",
              "linkType": "external",
            },
            {
              "externalLink": "Hello World",
              "id": "Hello World",
              "internalLink": {
                "id": "Hello World",
                "slug": "Hello World",
                "title": "Hello World",
              },
              "label": "Hello World",
              "linkType": "external",
            },
          ],
        },
      ],
    },
  },
}
`;

exports[`graphqlQueries mocks PAGE_CONTENT_QUERY successfully 1`] = `
{
  "errors": [
    [GraphQLError: Variable "$slug" of required type "String!" was not provided.],
  ],
}
`;

exports[`graphqlQueries mocks PAGES_QUERY successfully 1`] = `
{
  "data": {
    "Pages": {
      "docs": [
        {
          "id": "Hello World",
          "slug": "Hello World",
          "title": "Hello World",
        },
        {
          "id": "Hello World",
          "slug": "Hello World",
          "title": "Hello World",
        },
      ],
    },
  },
}
`;
